--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+#gulp-compiled pages
+main.min.css
+main.min.css.map
+scripts.min.js
+
 # Logs
 logs
 *.log
@@ -32,3 +37,5 @@ jspm_packages/
 
 # css maping 
 .map
+
+
