Minor changes css

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ jspm_packages/
 .map
 
 
+plugins/all-in-one-wp-migration/storage/674al0tz2kew/localhost-ryan-usafact-20180402-234454-915.wpress
+ai1wm-backups/localhost-ryan-usafact-20180402-234922-426.wpress
+ai1wm-backups/localhost-ryan-usafact-20180402-234948-884.wpress
+plugins/all-in-one-wp-migration/storage/674al0tz2kew/filemap.list
